# backend_conventions

./: .gitignore  README.md  readme.md
key_directory/: Cargo.toml  readme.md
key_directory/src/: main.rs
key_directory/src/model/: mod.rs  tickets.rs
key_directory/src/route/: login.rs  tickets.rs
keys_example/key/: readme.md
keys_example/src/: lib.rs
keys_example/src/route/: auth.rs  hello.rs  mod.rs
keys_example/tests/: basic_test.rs
