[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = [ "full" ] }
sqlx = { version = "0.8.2", features = [ "tls-rustls", "postgres", "runtime-tokio-rustls" ] }
dotenv = "0.15.0"
axum = { version = "0.7.7", features = [ "macros" ] }
error_tools = "0.17.0"
serde = { version = "1.0.213", features = ["derive"] }
tower-http = { version = "0.6.1", features = ["full"] }
serde_json = "1.0.132"
tower-cookies = "0.10.0"

[dev-dependencies]
httpc-test = "0.1.10"
